BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_vod__c.object
<CustomObject>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When using the Child Account feature, maintains the Child Account record that holds the relationship between the Person Account and the Location of the Call for Person Calls using Call Location and Group Calls with Attendees.</description>
        <label>Child Account</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_BMS__c</fullName>
        <formula>City_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of the Call Address.  This field should not be displayed on the Page Layout.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coacher_BMS_CN__c</fullName>
        <description>Coacher of the Coaching Call</description>
        <label>Coacher</label>
        <picklist>
            <controllingField>Coaching_Call_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>District Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coaching_Call_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Coaching Call Marker</description>
        <label>Coaching Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Activity_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the CoBrowse Multichannel Activity header record</description>
        <label>CoBrowse Activity</label>
        <referenceTo>Multichannel_Activity_vod__c</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Session_vod__c</fullName>
        <description>Stores the MC Engine CoBrowse unique identifier</description>
        <label>CoBrowse Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the CoBrowse presentation selected for this Call</description>
        <label>Presentation</label>
        <referenceTo>Content_Deployment_vod__c</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_URL_Participant_vod__c</fullName>
        <description>Stores the CoBrowse URL for the participant</description>
        <label>Participant URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_URL_Presenter_vod__c</fullName>
        <description>Stores the CoBrowse URL for the presenter</description>
        <label>Presenter URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_vod__c</fullName>
        <description>The user-selectable color for a call, as visible in VMobile.</description>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkSteel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkGray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkRed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkOrange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkPeach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkYellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkGreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkTeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkOlive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkBlue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkPurple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DarkMaroon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Event_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Community Event flag for PCAM interactions</description>
        <label>Community Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concur_Report_Name_vod__c</fullName>
        <label>Concur Report Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact (if any) that the call is associated with.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_BMS_EMEA__c</fullName>
        <description>BMS ACN - March 2015: Field to display the Country of the Interaction Owner.</description>
        <formula>TEXT(Owner:User.User_Source_Country_BMS_CORE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Department_BMS_CN__c</fullName>
        <description>to disnguinsh BU of user
for report purpose only</description>
        <formula>CreatedById</formula>
        <label>Creator Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Address_Line_1_vod__c</fullName>
        <description>Address Line 1 of the DEA Address.</description>
        <label>DEA Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Address_Line_2_vod__c</fullName>
        <description>Address Line 2 of the DEA Address.</description>
        <label>DEA Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DEA Address is a reference field to the Address record where the Controlled Substance has been sampled or shipped.  This reference value will be removed if the Address record is deleted.</description>
        <label>DEA Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipName>Calls1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEA_City_vod__c</fullName>
        <description>City of the DEA Address.</description>
        <label>DEA City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>DEA Expiration Date of the Physician&apos;s DEA License that received the controlled substance.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_State_vod__c</fullName>
        <description>State of the DEA Address.</description>
        <label>DEA State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Zip_4_vod__c</fullName>
        <description>Zip Code 4 of the DEA Address.</description>
        <label>DEA Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Zip_vod__c</fullName>
        <description>Zip Code of the DEA Address.</description>
        <label>DEA Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>The DEA # is the DEA License # of the Physician that received the Samples.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Products_vod__c</fullName>
        <description>A helper field to display the list of detailed products for a call. Product names should be delimited by double-spaces and order in priority from left to right. This field does not control processing and is included to make related lists and reports more user friendly.</description>
        <label>Detailed Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disbursed_To_vod__c</fullName>
        <description>Used to record sample disbursement information (if any). This contains all PDMA required fields (name, address, etc.) in text format. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Disbursed To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclaimer_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Nov 2014: used for Standard Rep Presentations only. Disclaimer set as a picklist with one value to facilitate its translation.</description>
        <label>Disclaimer</label>
        <picklist>
            <picklistValues>
                <fullName>I confirm that this Standard Rep Presentation doesn&apos;t need specific approval as per the latest version of the SOP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Used to record sample disclaimer used if a disbursement was made. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_BMS_CN__c</fullName>
        <description>Call Duration for BMS China</description>
        <label>Duration_BMS_China</label>
        <picklist>
            <picklistValues>
                <fullName>15 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_vod__c</fullName>
        <description>Duration of the call in minutes.</description>
        <label>Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EM_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a call report with a Veeva Event Management event.</description>
        <label>EM Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Display_Name_vod__c</fullName>
        <description>Entity&apos;s displayed name</description>
        <formula>IF( LEN( TRIM(Account_vod__c)) &gt; 0, Account_vod__r.Formatted_Name_vod__c ,              
IF(LEN( TRIM(Contact_vod__c))  &gt;0, Contact_vod__r.FirstName &amp; &quot; &quot; &amp;  Contact_vod__r.LastName,                   
IF(LEN( TRIM(User_vod__c))  &gt;0,    User_vod__r.FirstName &amp; &quot; &quot; &amp;  User_vod__r.LastName ,
IF(LEN( TRIM(Medical_Event_vod__c ))  &gt;0,    Medical_Event_vod__r.Name , &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For Internal Use Only</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Reference_Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the interaction this interaction is a duplicate of.</description>
        <label>Error Reference Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Interactions (Error Reference Call)</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evening_Call_BMS_EMEA_BE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BMS ACN - October 2015 : Field to be used by Belgian Sales Rep to indicate if the call took place in the Evening. This information will be filled by Reps in order to track SRPs that took place in the evening (from 18h). Used only in Standard Rep Presentation. To be used only by Belgian Sales Reps and Visible (Read Only) to other users .</description>
        <label>Evening Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Amount_vod__c</fullName>
        <description>Holds the number of amount of the expense on this call</description>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Attendee_Type_vod__c</fullName>
        <description>The Expense Attendee Type is meant to be placed in the Attendee Specific Fields section of the Call Report page layout. The values of this picklist should match the values available in the third-party expense system, such as Concur.</description>
        <label>Expense Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>BUSGUEST</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Post_Status_vod__c</fullName>
        <description>Holds a Success or Fail status based on the attempt to post this status into Concur.  If the expense was not yet posted, status = null</description>
        <label>Expense Post Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_System_External_ID_vod__c</fullName>
        <description>The ID that maps to the expense management system</description>
        <label>Expense System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Activity_Type_BMS_US__c</fullName>
        <description>Field to hold the FICO Activity Type for an Interaction from the FICO interface</description>
        <label>FICO Activity Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Quantity_BMS_US__c</fullName>
        <description>Field to hold the Quantity of items requested for an Interaction from the FICO interface.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FICO_Source_BMS_US__c</fullName>
        <description>Field to hold the Source of the Interaction from the FICO interface</description>
        <label>FICO Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_BMS__c</fullName>
        <formula>Account_vod__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Organization_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Attendee specific Organization specification for PCAM programs</description>
        <label>From Organization:</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Call_Type_BMS_CN__c</fullName>
        <description>When reps choose call type as group call they should be able to  choose group call type from  list.
CR #75</description>
        <label>Group Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>round table meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in-hospital meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sponsorship meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCO_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a HCO where the Meeting took place.</inlineHelpText>
        <label>HCO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions (Account)</relationshipLabel>
        <relationshipName>Interactions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Role_CIH_BMS__c</fullName>
        <label>HCP Role</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIV_Case_Manager_BMS_US__c</fullName>
        <label>HIV Case Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historic_Interaction_Type_BMS_US__c</fullName>
        <label>Historic Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Historic_Status_BMS_US__c</fullName>
        <label>Historic Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Attendees with the Incurred Expense button checked will be posted as Attendees to Concur.</description>
        <label>Incurred Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infusion_Nurse_BMS_US__c</fullName>
        <label>Infusion Nurse</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Channel_BMS_CORE__c</fullName>
        <description>Interaction Channel</description>
        <label>Interaction Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Face-to-Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote E-Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Rep Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Count_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: formula field used in reports to count the number of records</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Duration_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to allow MSM users to select the duration of their interaction</description>
        <label>Interaction Duration</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 15 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 to 30 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 to 45 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46 to 60 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61 to 120 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 120 min</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Intent_BMS_CORE__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture if an interaction if proactive or reactive.

October 2013 - Mapped on the EMEA-MSL layout. Predefault value to Reactive</description>
        <label>Interaction Intent</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Intent_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture if an interaction if proactive or reactive.</description>
        <label>Interaction Intent</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Sub_Type_BMS__c</fullName>
        <label>Interaction Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Face-to-Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1 Face to Face (2 or less)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference 1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1 Face to Face</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Topic_BMS_SHARED__c</fullName>
        <label>Interaction Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scientific Profiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Strategy Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Board Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease State Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Info Dept. Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Investigator Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial Pre-Initiation Visit / Non-Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grants Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expanded Access Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Access Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA on Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Economics &amp; Outcomes Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease State Discussion or Foundational Knowledge Discussion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Type_BMS_EMEA__c</fullName>
        <description>VPRO October 2014: UK Specific picklist to select wheather a call with an HCP is solicited or unsolicited.</description>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Solicited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolicited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Type_PNP_BMS_EMEA__c</fullName>
        <description>VPRO EMEA May-2015: Created for Italy to accomodate the requirement to flag Promotional and Non-Promotional Interactions</description>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Promotional / Comunicazione modifica scheda tecnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional / Notifica evento/ECM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional / Consegna materiale bibliografico depositato in AIFA richiesto dal medico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional / Notifica nuova formulazione</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Promotional / Profiling Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Promotional / Consegna materiale di aggiornamento non correlato a prodotto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional / Informazione Prodotto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Promotional/Comunicazione relativa ad aggiornamento sulla sicurezza del prodotto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>